===================================
Tortuga Changelog
===================================

Version 1.0.2
-----------------------------------
[updated] flexlider to version 2.6.0

Version 1.0.1
-----------------------------------
[fixed] styling of gallery items

Version 1.0
-----------------------------------
[added] Magazine Homepage template
[added] two column post layout
[added] post slider

Version 0.9
-----------------------------------
Initial Release