@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/tortuga/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Tortuga is a highly flexible and adventurous WordPress theme for your pirate magazine or any news related website. It supports three different post layouts, two sidebar schemes and a Magazine Homepage template based on widgets. Other highlights of Tortuga are the beautiful post slider and header widgets area. Arrr!
-Version: 1.0.1
+Version: 1.0.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: tortuga
@@ -667,6 +667,11 @@ textarea {
 	font-weight: normal;
 	text-decoration: none;
 	text-transform: uppercase;
+}
+
+.site-title a:link, 
+.site-title a:visited {
+	color: #fff;
 	-webkit-transition: all 0.2s ease;
 	-moz-transition: all 0.2s ease;
 	-ms-transition: all 0.2s ease;
@@ -674,8 +679,18 @@ textarea {
 	transition: all 0.2s ease;
 }
 
-.site-branding a:hover .site-title {
+.site-title a:hover,
+.site-title a:active {
 	color: #ccc;
+}
+
+.site-branding .custom-logo {
+	margin: 0.5em 1em 0 0;
+	padding: 0;
+	border: none;
+	vertical-align: top;
+	max-width: 100%;
+	height: auto;
 }
 
 /* Header Widgets */
